docs: get all posts
